k8s/service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-app-metrics
  namespace: k8s-test-app
  labels:
    app: k8s-test-app
    metrics: enabled
spec:
  selector:
    app: k8s-test-app
  ports:
  - name: metrics
    port: 5000
    targetPort: 5000
