k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-app
  namespace: k8s-test-app
  labels:
    app: k8s-test-app
spec:
  type: LoadBalancer
  selector:
    app: k8s-test-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: http
