k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-test-app
  namespace: k8s-test-app
  labels:
    app: k8s-test-app
  annotations:
   nginx.ingress.kubernetes.io/server-snippet: |
     if ($server_protocol = "HTTP/1.1") {
       set $http1_reject 1;
     }
     if ($http1_reject = 1) {
       return 426;
     }
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
      - test-app.v1-ukddc-poc.net
      secretName: test-app-cert-tls
  rules:
  - host: test-app.v1-ukddc-poc.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-test-app
            port:
              number: 80
